--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ dd {
 
 .listbox-dropdown {
   position: relative;
-  margin-left: 1.5em;
+  margin-right: 1.5em;
   padding: 0;
   z-index: 3;
 }
@@ -135,7 +135,7 @@ dd {
 }
 
 .listbox-dropdown__input {
-  width: auto;
+  width: 100px;
   height: 3em;
   padding-left: 1em;
   border: none;
@@ -189,7 +189,7 @@ dd {
   width: auto;
   height: 0;
   margin: 0;
-  padding: 0.2em 0 0.2em 1em;
+  padding: 0.2em 1em 0.2em 1em;
   column-count: 3;
   overflow: hidden;
   z-index: 3;
