--- a/css/style.css
+++ b/css/style.css
@@ -1,78 +1,27 @@
-.bg-blue {
-  background-color: #0d6efd;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.bg-green {
-  background-color: #20c997;
+/* ----------- HEADER ----------- */
+
+.page-header {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1em;
+  align-items: center;
 }
 
-.bg-red {
-  background-color: #dc3545;
+.page-header h1 {
+  color: #d04f4f;
 }
+
+/* ----------- SEARCH SECTION ----------- */
 
 .search-main input {
   background-color: #e9ecef;
   border-right: none;
-}
-
-.card-body {
-  min-height: 200px;
-}
-
-.card-title {
-  display: flex;
-  justify-content: space-between;
-}
-
-.card-name {
-  width: 70%;
-}
-
-.card-clock::before {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 0.3em;
-  font-family: 'FontAwesome';
-  font-size: 1.25em;
-  font-weight: 400;
-  content: '\f017';
-}
-
-.card-details {
-  display: flex;
-  justify-content: space-between;
-  max-height: 175px;
-}
-
-.card-recipe {
-  display: inline-block;
-  width: calc(45%);
-  max-height: 150px;
-  font-size: 0.8em;
-  overflow: hidden;
-}
-
-.card-ingredients {
-  width: auto;
-}
-
-dl {
-  list-style-type: none;
-  margin-bottom: 0;
-  line-height: 1.2em;
-  font-size: 0.8em;
-}
-
-dt {
-  float: left;
-  clear: left;
-  margin-right: 5px;
-  /*     font-weight: bold; */
-}
-
-dd {
-  margin-left: 0px;
-  margin-bottom: 0;
 }
 
 /* ----------- DROPDOWNS SECTION ----------- */
@@ -203,11 +152,15 @@ dd {
   cursor: pointer;
 }
 
-.tags-container{ 
+.tags-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content:flex-start;
+  justify-content: flex-start;
   margin-bottom: 1em;
+}
+
+.tag{
+  margin-right: 1em;
 }
 
 .tag::after {
@@ -218,4 +171,65 @@ dd {
   font-size: 1.25em;
   font-weight: 800;
   content: '\f057';
+}
+
+/* ----------- RECIPES SECTION ----------- */
+
+.card-body {
+  min-height: 200px;
+}
+
+.card-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-name {
+  width: 70%;
+}
+
+.card-clock::before {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 0.3em;
+  font-family: 'FontAwesome';
+  font-size: 1.25em;
+  font-weight: 400;
+  content: '\f017';
+}
+
+.card-details {
+  display: flex;
+  justify-content: space-between;
+  max-height: 175px;
+}
+
+.card-recipe {
+  display: inline-block;
+  width: calc(45%);
+  max-height: 150px;
+  font-size: 0.8em;
+  overflow: hidden;
+}
+
+.card-ingredients {
+  width: auto;
+}
+
+dl {
+  list-style-type: none;
+  margin-bottom: 0;
+  line-height: 1.2em;
+  font-size: 0.8em;
+}
+
+dt {
+  float: left;
+  clear: left;
+  margin-right: 5px;
+}
+
+dd {
+  margin-left: 0px;
+  margin-bottom: 0;
 }
