30052023 | tryouts placeholder input dropdowns

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@
   cursor: pointer;
 }
 
+.listbox-dropdown__input::placeholder{
+  color: lightgrey;
+}
+
 .arrow-container {
   position: relative;
   width: 3em;
