--- a/css/style.css
+++ b/css/style.css
@@ -179,9 +179,13 @@
 
 /* ----------- RECIPES SECTION ----------- */
 
-/* .row {
-  margin-bottom: 1.5em;
-} */
+
+.gallery_section {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(200px, 1fr));
+  grid-gap: 3em;
+  /* margin-top: 50px; */
+}
 
 .card-body {
   min-height: 250px;
