--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,12 @@
   width: 70%;
 }
 
+.card-img-top {
+  padding: 1em;
+  background-color: #6dc27d;
+  opacity: 0.4;
+}
+
 .card-clock::before {
   display: inline-block;
   vertical-align: middle;
